files/AWS/3. Apache server/main.tf
provider "aws" {
  region  = "us-east-1"
  access_key = "AKIA2NNCZ7U3HZAIF74N"
  secret_key = "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"
}


# resource "<provider>_<resource_type>" "name" {
#   config options
#   key = ""
#   key2 = ""
# }

resource "aws_instance" "my-first-server" {
  ami           = "ami-053b0d53c279acc90"
  instance_type = "t2.micro"
  tags = {
    Name = "Ubuntu"
  }

  }


# resource "aws_vpc" "my_vpc" {
#   cidr_block = "172.16.0.0/16"

#  tags = {
#    Name = "Prod VPC"
#  }
# }

# resource "aws_subnet" "my_subnet" {
#   vpc_id            = aws_vpc.my_vpc.id
#   cidr_block        = "172.16.10.0/24"
#   availability_zone = "us-east-1b"

#   tags = {
#     Name = "prod-subnet"
#   }
# }


# 1. create VPC
# 2. create internet gateway
# 3. create custom route table
# 4. create a subnet
# 5. associate subnet with route table
# 6. create security group to allow port 22, 80, 443
# 7. create a network interface with an ip in the subnet that was created in step 4
# 8. assign an elastic IP to the netowrk interface created in step 7
# 9. create Ubuntu server and install/enable apache2


# 1. create VPC

resource "aws_vpc" "prod-vpc" {
  cidr_block = "10.0.0.0/16"

  tags = {
    Name = "production"
  }
}

# 2. create internet gateway

resource "aws_internet_gateway" "gw" {
  vpc_id = aws_vpc.prod-vpc.id

  tags = {
    Name = "main"
  }
}

# 3. create custom route table



resource "aws_route_table" "prod-route-table" {
  vpc_id = aws_vpc.prod-vpc.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.gw.id
  }

  route {
    ipv6_cidr_block = "::/0"
    gateway_id      = aws_internet_gateway.gw.id
  }

  tags = {
    Name = "Prod"
  }
}

# 4. create a subnet

resource "aws_subnet" "subnet-1" {
  vpc_id = aws_vpc.prod-vpc.id
  cidr_block = "10.0.1.0/24"
  availability_zone = "us-east-1b"
  
}

# 5. associate subnet with route table (route table association)

resource "aws_route_table_association" "a" {
  subnet_id      = aws_subnet.subnet-1.id
  route_table_id = aws_route_table.prod-route-table.id
}

# 6. create security group to allow port 22, 80, 443

resource "aws_security_group" "allow_web" {
  name        = "allow_web_traffic"
  description = "Allow Web inbound traffic"
  vpc_id      = aws_vpc.prod-vpc.id

  ingress {
    description      = "HTTPS"
    from_port        = 443
    to_port          = 443
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
    
  }

  ingress {
    description      = "HTTP"
    from_port        = 80
    to_port          = 80
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
    
  }

  ingress {
    description      = "SSH"
    from_port        = 22
    to_port          = 22
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
    
  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    
  }

  tags = {
    Name = "allow_ports"
  }
}


# 7. create a network interface with an ip in the subnet that was created in step 4

resource "aws_network_interface" "web-server-nic" {
  subnet_id       = aws_subnet.subnet-1.id
  private_ips     = ["10.0.1.50"]
  security_groups = [aws_security_group.allow_web.id]

}

# 8. assign an elastic IP to the netowrk interface created in step 7
resource "aws_eip" "two" {
  vpc                       = true
  network_interface         = aws_network_interface.web-server-nic.id
  associate_with_private_ip = "10.0.1.50"
  depends_on = [aws_internet_gateway.gw]
}

output "server_public_ip" {
    value = aws_eip.two.public_ip
}

output "server_private_IP" {
  value = aws_instance.web-server-instance.private_ip
  
}

# 9. create Ubuntu server and install/enable apache2
resource "aws_instance" "web-server-instance" {
  ami = "ami-08c40ec9ead489470"
  instance_type = "t2.micro"
  availability_zone = "us-east-1b"
  tags = {
    name = "Web-server"
  }
  key_name = "main-key"

  network_interface {
    device_index = 0
    network_interface_id = aws_network_interface.web-server-nic.id

  }
  user_data = <<-EOF
                 #!/bin/bash
                 sudo apt update -y
                 sudo apt install apache2 -y
                 sudo systemctl start apache2
                 sudo bash -c 'echo your very first web server > /var/www/html/index.html'
                 EOF
}
